Add fetchpriority property to card image element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 <body>
   <main>
     <div class="card">
-      <img class="card__image" src="./images/image-qr-code.png" alt="qr code" width="288" height="288">
+      <img class="card__image" src="./images/image-qr-code.png" alt="qr code" 
+        width="288" height="288" fetchpriority="high">
       <div class="card__content">
         <h2 class="card__title">
           Improve your front-end skills by building projects
